data/derived/sp14/progs/unify/prog0426.ml.out
Characters 113-114:
  (a*10, result)
   ^
Error: This expression has type 'a * int list
       but an expression was expected of type int
